* General

All user visible changes to organice will be documented in this file.

When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.




* [2020-07-08 Wed]
** Added
   - Allow template-variables in the header-path in a capture template
     - Thank you [[https://github.com/jayesh-bhoot][jayesh-bhoot]] for your [[https://github.com/200ok-ch/organice/pull/387/][PR]] 🙏
* [2020-06-14 Sun]
** Added
   - Allow capture templates to insert at beginning or end of file
     - Thank you [[https://github.com/aspiers][aspiers]] for your [[https://github.com/200ok-ch/organice/pull/324][PR]] 🙏
* [2020-06-05 Fri]
** Fixed
   - =file:= links are sanity checked before opened
     - =file:= links opened in iOS from the PWA view will not open Mobile Safari
     - Open issue: Some links will be opened as directories when the
       link is not really going towards a directory.
     - Thank you [[https://github.com/aspiers][aspiers]] for your [[https://github.com/200ok-ch/organice/pull/311][PR]] 🙏

* [2020-06-03 Wed]
** Added
   - =TODO= keyword sets can now be anywhere in the file
     - Thank you [[https://github.com/aspiers][aspiers]] for your [[https://github.com/200ok-ch/organice/pull/310][PR]] 🙏
* [2020-05-30 Sat]

** Added
   - Make local =file:...= links navigate to the relevant file
     - Thank you [[https://github.com/aspiers][aspiers]] for your [[https://github.com/200ok-ch/organice/pull/307][PR]] 🙏

* [2020-05-06 Wed]

** Fixed
   - Planning items now respect the new hard-indent setting.

* [2020-05-05 Tue]

** Fixed
   - Append new tags correctly to title.
     - If a header didn't have tags before, the first tags were
       erroneously appended without a space.

* [2020-04-06 Mon]

** Added
   - Support org-adapt-indentation