@@ -7,6 +7,15 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
 
 
 
+
+* [2020-07-28 Tue]
+** Fixed
+   - Feature detection for =crypto.subtle= module
+     - This is used for change detection in the changelog. The module
+       is only available in secure contexts. Hence, when used locally
+       and on a private IP range, depending on the browser, it might
+       not be available.
+
 * [2020-07-08 Wed]
 ** Added
    - Allow template-variables in the header-path in a capture template
